# diode_pcb

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  blinker.zen  blinky.zen  dist-workspace.toml  flake.nix  flake.nix.template  install.sh  pyproject.toml
.github/: build-setup.yml
.github/workflows/: deploy.yaml  release.yml  test.yml  vscode-extension.yml
crates/pcb/: Cargo.toml
crates/pcb-buildifier/: Cargo.toml  README.md  build.rs
crates/pcb-command-runner/: Cargo.toml
crates/pcb-eda/: Cargo.toml  README.md
crates/pcb-eda/src/: lib.rs
crates/pcb-eda/src/kicad/: symbol.rs  symbol_library.rs
crates/pcb-eda/tests/: test_eda.rs  test_utils.rs
crates/pcb-kicad/: Cargo.toml
crates/pcb-kicad/src/: lib.rs
crates/pcb-layout/: Cargo.toml
crates/pcb-layout/src/: lib.rs
crates/pcb-layout/src/scripts/: update_layout_file.py
crates/pcb-layout/tests/: layout_generation.rs
crates/pcb-layout/tests/resources/complex/: Board.zen  Module.zen  Submodule.zen
crates/pcb-layout/tests/resources/complex/module/: default.net  layout.kicad_pcb  layout.kicad_prl  layout.kicad_pro
crates/pcb-layout/tests/resources/complex/submodule/: default.net  fp-lib-table  layout.kicad_pcb  layout.kicad_prl
crates/pcb-layout/tests/resources/component_side_sync/: Board.zen  Module.zen
crates/pcb-layout/tests/resources/component_side_sync/module/: default.net  layout.kicad_pcb  layout.kicad_pro
crates/pcb-layout/tests/resources/dnp/: MyBoard.zen
crates/pcb-layout/tests/resources/graphics/: Board.zen  Module.zen
crates/pcb-layout/tests/resources/graphics/module/: default.net  layout.kicad_pcb  layout.kicad_prl
crates/pcb-layout/tests/resources/module_layout/: Main.star
crates/pcb-layout/tests/resources/simple/: .gitignore  BMI270.star  BMI270.zen  Capacitor.star  MyBoard.star
crates/pcb-layout/tests/resources/zones/: Board.zen  Module.zen
crates/pcb-layout/tests/resources/zones/module/: fp-lib-table  layout.kicad_pcb  layout.kicad_prl
crates/pcb-layout/tests/snapshots/: layout_generation__complex.layout.json.snap  layout_generation__component_side_sync.layout.json.snap  layout_generation__dnp.layout.json.snap  layout_generation__graphics.layout.json.snap  layout_generation__multi_pads.layout.json.snap  layout_generation__simple.layout.json.snap  layout_generation__zones.layout.json.snap
crates/pcb-sch/: Cargo.toml
crates/pcb-sch/src/: bom.rs  kicad_netlist.rs  kicad_schematic.rs  lib.rs
crates/pcb-sexpr/: Cargo.toml
crates/pcb-sim/: Cargo.toml
crates/pcb-sim/src/: lib.rs
crates/pcb-star/: Cargo.toml
crates/pcb-star-core/: Cargo.toml
crates/pcb-star-wasm/: Cargo.toml
crates/pcb-star-wasm/src/: bundle.rs  lib.rs
crates/pcb-starlark-lsp/: Cargo.toml
crates/pcb-starlark-lsp/src/: completion.rs  server.rs  test.rs
crates/pcb-test-utils/: Cargo.toml
crates/pcb-test-utils/src/: lib.rs  sandbox.rs  snapdir.rs
crates/pcb-test-utils/src/snapshots/: pcb_test_utils__sandbox__tests__cloned_repo.snap  pcb_test_utils__sandbox__tests__multi_branches.snap  pcb_test_utils__sandbox__tests__project.snap
crates/pcb-ui/: Cargo.toml  README.md
crates/pcb-ui/examples/: demo.rs
crates/pcb-ui/src/: lib.rs
crates/pcb-zen/: Cargo.toml
crates/pcb-zen-core/: Cargo.toml
crates/pcb-zen-wasm/: Cargo.toml
crates/pcb/src/: bom.rs  build.rs  clean.rs  fmt.rs  info.rs  layout.rs  lsp.rs  main.rs  open.rs  release.rs  sim.rs  tag.rs  test.rs  tracking_resolver.rs  vendor.rs  workspace.rs
crates/pcb/src/upgrade/: mod.rs
crates/pcb/src/upgrade/codemods/: mod.rs  remove_directory_loads.rs
crates/pcb/tests/: bom.rs  build.rs  info.rs  path.rs  release.rs  simple.rs  tag.rs  test_bench.rs
crates/pcb/tests/assets/testbench/: factory_checks_testbench.zen  failing_checks_testbench.zen  matchers.zen  simple_module.zen  simple_testbench.zen
crates/pcb/tests/snapshots/: bom__bom_capacitors_json.snap  bom__bom_capacitors_table.snap  bom__bom_default.snap  bom__bom_json.snap  bom__bom_simple_resistors_json.snap  bom__bom_simple_resistors_table.snap  bom__bom_table.snap  build__aggregated_warnings.snap  build__alias_unstable_ref_warning.snap  build__commit_stable_ref.snap  build__cross_repo_unstable_warning.snap  build__default_alias_unstable_ref_warning.snap  build__deny_warnings_flag.snap  build__gitlab_unstable_ref_warning.snap  build__load_and_module_unstable_ref_warning.snap  build__method_chaining_unstable_ref_warning.snap  build__mixed_aggregated_and_unique_warnings.snap  build__mixed_stable_unstable_refs.snap  build__module_unstable_ref_warning.snap  build__transitive_unstable_dependencies.snap  build__unstable_ref_no_explicit_branch.snap  build__unstable_ref_wrong_tag.snap  build__warning_and_error_mixed.snap  info__board_without_pcb_toml.snap  info__empty_workspace.snap  info__json_format.snap  info__multiple_boards.snap  info__no_workspace_config.snap  info__single_board.snap  info__with_path.snap  path__path_directory_vendor_dir.snap  path__path_function_vendor.snap  path__path_function_vendor_dir.snap  path__path_local_mixed_build.snap  path__path_local_mixed_release.snap  path__path_missing_no_allow_build.snap  release__case_insensitive_tag.snap  release__case_insensitive_tag_build.snap  release__release_basic.snap  release__release_basic_build.snap  (+25 more)
docs/: docs.json  mint.json  spec.md  spec.mdx  style.css
docs/pages/: antenna_matching_network.mdx  quickstart.mdx  spec.mdx  vscode.mdx
examples/AD7171/: AD7171.zen
examples/HighSideCurrentSense/: HighSideCurrentSense.zen
examples/INA240A/: INA240A.zen
examples/L6387E/: L6387E.zen
examples/LEDCircuit/: LEDCircuit.zen
examples/PhaseDriver/: PhaseDriver.zen
examples/RCFilter/: RCFilter.zen
examples/VoltageDivider/: VoltageDivider.zen
layout/: default.net  fp-lib-table  layout.kicad_pcb  layout.kicad_prl  snapshot.layout.json
pcb/: __init__.py
pcb.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
test-workspaces/bench/: bmi270.zen  lm5163q1.zen
test-workspaces/with-pcb-toml/: pcb.toml
vscode/: .vscodeignore  README.md  install.sh  package-lock.json  package.json
(+311 files in other folders)
