[project]
name = "pcb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []
authors = [
    {name = "Davide Asnaghi", email = "davide@diode.computer"},
    {name = "Lenny Khazan", email = "lenny@diode.computer"},
]

[project.urls]
Homepage = "https://github.com/diodinc/pcb"

[project.scripts]
pcb = "cli:main"
