[package]
name = "pcb-eda"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
authors = { workspace = true }
description = "EDA tool integration for PCB design"

[dependencies]
anyhow = { workspace = true }
sexp = { workspace = true }

[dev-dependencies]
env_logger = { workspace = true }
insta = { workspace = true }
tempfile = { workspace = true }
