[package]
name = "pcb-layout"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
authors = { workspace = true }
description = "PCB layout generation and management"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
pcb-sch = { workspace = true }
pcb-kicad = { workspace = true }
log = { workspace = true }
tempfile = { workspace = true }

[dev-dependencies]
assert_fs = { workspace = true }
assert_cmd = { workspace = true }
insta = { workspace = true }
serial_test = { workspace = true }
paste = { workspace = true }
walkdir = { workspace = true }
zip = { workspace = true }
serde_json = { workspace = true }
pcb-zen = { workspace = true }
