[package]
name = "pcb-star-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
pcb-star-core = { workspace = true, features = ["wasm"] }
pcb-sch = { workspace = true }
pcb-eda = { workspace = true }
wasm-bindgen = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde-wasm-bindgen = { workspace = true }
js-sys = { workspace = true }
web-sys = { workspace = true }
anyhow = { workspace = true }
console_error_panic_hook = { workspace = true }
starlark = { workspace = true }
lazy_static = { workspace = true }
base64 = { workspace = true }
toml = { workspace = true }
zip = { workspace = true }
console_log = { workspace = true }
log = { workspace = true }

[dev-dependencies]
wasm-bindgen-test = { workspace = true }
