[package]
name = "pcb-test-utils"
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
insta = { workspace = true }
tempfile = { workspace = true }
assert_cmd = { workspace = true }
assert_fs = { workspace = true }
duct = { workspace = true }
dir-diff = { workspace = true }
ignore = { workspace = true }
regex = { workspace = true }
sha2 = { workspace = true }
globset = { workspace = true }
url = { workspace = true }
pcb-zen = { workspace = true }
pcb-zen-core = { workspace = true }
