[package]
name = "pcb"
version = "0.2.0-dev"
edition = "2021"
repository = "https://github.com/diodeinc/pcb"
description = "next-gen tooling for pcb design"
homepage = "https://github.com/diodeinc/pcb"
authors = ["Diode Computers, Inc. <founders@diode.computer>"]

[package.metadata.wix]
upgrade-guid = "8F8B3FF2-0D55-454F-B80D-1E216FCA6C42"
path-guid = "019D9AC1-AFB6-4D44-9FE5-F7BCA676A7DF"
license = false
eula = false

[[bin]]
name = "pcb"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
pcb-star = { workspace = true }
pcb-sch = { workspace = true }
pcb-layout = { workspace = true }
log = { workspace = true }
ariadne = { workspace = true }
env_logger = { workspace = true }
colored = { workspace = true }
pcb-kicad = { workspace = true }
open = { workspace = true }
inquire = { workspace = true }
pcb-ui = { workspace = true } 
